	it or its Windows counterpart <winldap.h> has already been
	included through <e2k-global-catalog-ldap.h> anyway.
	(ber_dupbv): Need this on Windows, too.
	(ldap_op_finished): Use ldap_abandon() instead of the nonstandard
	ldap_abandon_ext(). The extra parameters were NULL anyway, meaning
	it is equivalent to calling ldap_abandon().

2008-05-08  Tor Lillqvist  <tml@novell.com>

	* evolution-exchange-zip.in: Minor updates.

2008-05-07  Tor Lillqvist  <tml@novell.com>

	* configure.in: Move the AM_CONDITIONAL for
	SUNLDAP. AM_CONDITIONAL should not be inside shell if statements.

2008-05-05  Johan Euphrosine  <proppy@aminche.com>

	* addressbook/e-book-backend-gal.c: Fix include path for e-db3-utils.h, now in libebackend.
	* storage/main.c: Fix include path for e-data-server-module.h, now in libebackend.

2008-04-25  Bharath Acharya  <abharath@novell.com>

	Fixes #358706 (bnc)

	* camel/camel-exchange-store.c: 
	(update_camel_stub): Updates the camel stub value
	(exchange_connect): 
	(exchange_disconnect): Reset the stub so that reconnect happens 
	sanely.
	* mail/mail-stub-listener.h: Store the stub value in the listener so 
	that we can use the folders_by_name (hash table) later.
	* storage/exchange-component.c: 
	(impl_setLineStatus): 
	(new_connection): Update the hash table for the new stub

2008-04-21  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.1 release and version bump.

2008-04-22  Matthew Barnes  <mbarnes@redhat.com>

	* docs/reference/arch/bug-private.xml:
	* docs/reference/features/other-users.xml:
	Fix some outdated Bugzilla links.

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #526740

	* configure.in: Require minimum GLib 2.16.0.
	* calendar/e-cal-backend-exchange.c: (get_mime_type), (build_msg):
	Drop dependency on gnome-vfs, use new gio instead.

2008-04-09  Suman Manjunath  <msuman@novell.com>

	* calendar/e-cal-backend-exchange.c: (open_calendar):